--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -23,18 +23,18 @@ Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not s
 
 ## Ancient era buildings
 
-Palace = 
+Palace = Istana
 Indicates the capital city = 
 
 Monument = 
-Granary = 
+Granary = Lumbung
 Stone Works = 
 Must not be on plains = 
 
 Stonehenge = 
 'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
 
-Library = 
+Library = Perpustakaan
 +1 Science Per 2 Population = 
 Paper Maker = 
 
@@ -42,24 +42,24 @@ The Great Library =
 Free Technology = 
 'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
 
-Circus = 
-Walls = 
-Walls of Babylon = 
+Circus = Sirkus
+Walls = Tembok
+Walls of Babylon = Tembok Babylon
 
 The Pyramids = 
 'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
 Worker construction increased 25% = 
 Provides 2 free workers = 
 
-Barracks = 
-Krepost = 
+Barracks = Barak
+Krepost = Krepost
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = 
 
 Colossus = 
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
 +1 gold from worked water tiles in city = 
 
-Temple = 
+Temple = Kuil
 Burial Tomb = 
 
 The Oracle = 
@@ -67,7 +67,7 @@ The Oracle =
 Free Social Policy = 
 
 
-Lighthouse = 
+Lighthouse = Mercusuar
 Can only be built in coastal cities = 
 +1 food from Ocean and Coast tiles = 
 
@@ -98,12 +98,12 @@ Colosseum =
 Terracotta Army = 
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
 
-Market = 
-Bazaar = 
+Market = Pasar
+Bazaar = Bazaar
 Provides 1 extra copy of each improved luxury resource near this City = 
 +2 Gold for each source of Oil and oasis = 
 
-Monastery = 
+Monastery = Biara
 
 Notre Dame = 
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 
@@ -140,7 +140,7 @@ University =
 Wat = 
 
 Oxford University = 
-Castle = 
+Castle = Kastil
 Mughal Fort = 
 
 Alhambra = 
@@ -164,8 +164,8 @@ Sistine Chapel =
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
 Culture in all cities increased by 25% = 
 
-Bank = 
-Hanse = 
+Bank = Bank
+Hanse = Hanse
 +5% Production for every Trade Route with a City-State in the empire = 
 Satrap's Court = 
 
@@ -173,7 +173,7 @@ Forbidden Palace =
 'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 
 Unhappiness from population decreased by 10% = 
 
-Theatre = 
+Theatre = Teater
 
 Leaning Tower of Pisa = 
 'Don't clap too hard - it's a very old building.' - John Osbourne = 
@@ -189,9 +189,9 @@ Taj Mahal =
 'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 
 Empire enters golden age = 
 
-Windmill = 
+Windmill = Kincir Angin
 Must not be on hill = 
-Museum = 
+Museum = Museum
 Hermitage = 
 
 The Louvre = 
@@ -203,9 +203,9 @@ Seaport =
 +15% production of naval units = 
 
 Public School = 
-Hospital = 
+Hospital = Rumah Sakit
 25% of food is carried over after a new citizen is born = 
-Factory = 
+Factory = Pabrik
 Stock Exchange = 
 
 Big Ben = 
@@ -224,7 +224,7 @@ Neuschwanstein =
 '...the location is one of the most beautiful to be found, holy and unapproachable, a worthy temple for the divine friend who has brought salvation and true blessing to the world.'  - King Ludwig II of Bavaria = 
 +1 happiness, +2 culture and +3 gold from every Castle = 
 
-Military Academy = 
+Military Academy = Akademi Militer
 
 Brandenburg Gate = 
 Free Great General appears near the Capital = 
@@ -290,10 +290,10 @@ Requires a [buildingName] in this city =
 Requires [resource] = 
 Required tech: [requiredTech] = 
 
-Diplomacy = 
-War = 
-Peace = 
-Declare war = 
+Diplomacy = Diplomasi
+War = Perang
+Peace = Damai
+Declare war = Nyatakan perang
 Declare war on [civName]? = 
 [civName] has declared war on us! = 
 [leaderName] of [nation] = 
@@ -314,12 +314,12 @@ Indeed! =
 Denounce ([numberOfTurns] turns) = 
 We will remember this. = 
 
-Unforgivable = 
-Enemy = 
+Unforgivable = Tak Termaafkan
+Enemy = Musuh
 Competitor = 
 Neutral = 
 Favorable = 
-Friend = 
+Friend = Teman
 Ally = 
 
 ## Diplomatic modifiers
@@ -344,7 +344,7 @@ You refused to stop settling cities near us =
 Your arrogant demands are in bad taste = 
 Your use of nuclear weapons is disgusting! = 
 
-Demands = 
+Demands = Permintaan
 Please don't settle new cities near us. = 
 Very well, we shall look for new lands to settle. = 
 We shall do as we please. = 
@@ -363,7 +363,7 @@ Cultured =
 Maritime = 
 Mercantile = 
 Militaristic = 
-Type:  = 
+Type:  = Jenis:
 Influence:  = 
 Reach 30 for friendship. = 
 Reach highest influence above 60 for alliance. = 
@@ -382,14 +382,14 @@ Our trade offer =
 Pleasure doing business with you! = 
 I think not. = 
 That is acceptable. = 
-Accept = 
+Accept = Terima
 Keep going = 
 There's nothing on the table = 
 Peace Treaty = 
 Agreements = 
 Open Borders = 
 Gold per turn = 
-Cities = 
+Cities =
 Technologies = 
 Declarations of war = 
 Introduction to [nation] = 
@@ -514,14 +514,14 @@ Cultural =
 HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = 
 Online Multiplayer = 
 
-World size = 
-Tiny = 
-Small = 
-Medium = 
-Large = 
-Huge = 
+World size = Ukuran Dunia
+Tiny = Sangat Kecil
+Small = Kecil
+Medium = Medium
+Large = Besar
+Huge = Sangat Besar
 
-Difficulty = 
+Difficulty = Kesulitan
 Settler = 
 Chieftain = 
 Warlord = 
@@ -532,8 +532,8 @@ Immortal =
 Deity = 
 
 AI = 
-Remove = 
-Random = 
+Remove = Hapus
+Random = Acak
 Human = 
 Hotseat = 
 User ID = 
