--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -861,7 +861,7 @@ Science victory = Vittoria Scientifica
 Cultural victory = Vittoria Culturale
 Conquest victory = Vittoria per Dominazione
 Complete all the spaceship parts\n to win! = Completa tutte le parti\n  dell'astronave per vincere!
-Complete 5 policy branches\n to win! = Completa quattro rami\n  politici per vincere!
+Complete 5 policy branches\n to win! = Completa cinque rami\n  politici per vincere!
 Destroy all enemies\n to win! = Distruggi tutti gli avversari \n per vincere!
 You have won a scientific victory! = Hai ottenuto una Vittoria Scientifica!
 You have won a cultural victory! = Hai ottenuto una Vittoria Culturale!
@@ -1292,7 +1292,14 @@ Old Faithful = Old Faithful
 Rock of Gibraltar = Rocca di Gibilterra
 Cerro de Potosi = Cerro Rico de Potosí
 El Dorado = El Dorado
+500 Gold to the first civilization to discover it = 500 Oro per la prima civiltà che la scopre per prima
 Fountain of Youth = Fonte della giovinezza
+Adjacent military land units heal at double rate for the rest of the game = Cura tutte le unità militari terrestri adiacenti per il resto della partita
+
+# Smashfanful suggestion: all these next two lines need to be in one popup message when you discover a Natural Wonder, three if in case with El Dorado
+Congratulations! The discovery of [naturalWonder] has increased the Happiness in the Empire. = Congratulazioni! Hai scoperto [naturalWonder], il che ha incrementato la Felicità nel tuo impero.
+Output if worked:  = Resa se sfruttata: 
+For finding this wonder first you have gained [goldAmount] = Ottieni [goldAmount] per aver trovato la Meraviglia per primo
 
 # Resources
 
