Fixed the placeholder typos in all translations

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1068,7 +1068,7 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Kan unit 
 [cityName] has been founded! = [cityName] is gesticht!
 [cityName] is starving! = [cityName] verhongerd!
 [construction] has been built in [cityName] = [construction] is gebouwd in [cityName]
-[wonder] has been built in a faraway land = is gebouwd in een land ver weg
+[wonder] has been built in a faraway land = [wonder] is gebouwd in een land ver weg
 Work has started on [construction] = Werk is begonen aan [construction]
 [cityName] cannot continue work on [construction] = [cityName] kan niet verder werken aan [construction]
 [cityname] has expanded its borders! = [cityname] heeft zijn grenzen uitgebreid!
@@ -1085,7 +1085,7 @@ An enemy [unit] has destroyed our [ourUnit] = Een vijandige [unit] heeft onze [o
 An enemy [RangedUnit] has destroyed the defence of [cityname] = Een vijand [RangedUnit] heeft de verdediging van [cityname] vernietigd
 Enemy city [cityName] has destroyed our [ourUnit] = Vijandelijke stad [cityName] heeft onze [ourUnit] vernietigd
 An enemy [unit] was destroyed while attacking [cityname] = Een vijandige [unit] werd gedood tijdens zijn aanval op [cityname]
-An enemy [unit] was destroyed while attacking our [ourUnit] = Een vijandige [unit] werd gedood tijdens zijn aanval op onze [unit]
+An enemy [unit] was destroyed while attacking our [ourUnit] = Een vijandige [unit] werd gedood tijdens zijn aanval op onze [ourUnit]
 Our [attackerName] was destroyed by an intercepting [interceptorName] = Onze [attackerName] is vernietigd door een onderscheppende [interceptorName]
  # Requires translation!
 Our [interceptorName] intercepted and destroyed an enemy [attackerName] = 
@@ -1244,7 +1244,7 @@ Raze city = Stad vernietigen
 Stop razing city = Stad vernieteging stoppen
 Buy for [amount] gold = Voor [amount] gold kopen
 Buy = Kopen
-Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Wilt u [constructionName] kopen voor [buildGoldCost] goud?
+Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Wilt u [constructionName] kopen voor [buildingGoldCost] goud?
 Maintenance cost = Onderhouskosten
 Pick construction = Bouwwerk kiezen
  # Requires translation!
