--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -352,7 +352,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Dona [amountOfCulture] punti Cultura a minimo 30 Punti Influenza
+Provides [amountOfCulture] culture at 30 Influence = Dona [amountOfCulture] punti Cultura a minimo 30 Punti Influenza
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Dona 3 Cibo alla Capitale e 1 Cibo alle altre Città a minimo 30 Punti Influenza
 Provides 3 happiness at 30 Influence = Dona 3 Punti Felicità a minimo 30 Punti Influenza
 Provides land units every 20 turns at 30 Influence = Concede un'unità terrestre ogni 20 turni a minimo 30 Punti Influenza
