--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -1656,7 +1656,7 @@ Siege II = 공성 II
 Siege III = 공성 III
 Evasion = 회피
 Reduces damage taken from interception by 50% = 요격으로 인한 피해 -50%
-Bonus when intercepting [amount]% = 적을 요격할 때 전투력 +[bonusAmount]%
+Bonus when intercepting [amount]% = 적을 요격할 때 전투력 +[amount]%
 Ambush I = 공중 매복 I
 Ambush II = 공중 매복 II
 Haka War Dance = 하카 전쟁 의식
