--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -642,7 +642,7 @@ Enemy city [cityName] has destroyed our [ourUnit] = Wrogie miasto [cityName] pok
 An enemy [unit] was destroyed while attacking [cityname] = Miasto [cityname] odparło atak wrogich jednostek [unit]
 An enemy [unit] was destroyed while attacking our [ourUnit] = Nasze jednostki [ourUnit] odparły atak wrogich jednostek [unit]
 Our [attackerName] was destroyed by an intercepting [interceptorName] = Nasz [attackerName] został przechwycony przez [interceptorName]
-Our [interceptorName] intercepted and destroyed an enemy [attackerName] = Nasza jednostka przechwytująca [interceptor] przechwyciła i zniszczyła przeciwnika [attackerName]
+Our [interceptorName] intercepted and destroyed an enemy [attackerName] = Nasza jednostka przechwytująca [interceptorName] przechwyciła i zniszczyła przeciwnika [attackerName]
 Our [$attackerName] was attacked by an intercepting [$interceptorName] = Nasz [$attackerName] został zaatakowany przez [$interceptorName]
 Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = Nasza jednostka przechwytująca [$interceptorName] przechwyciła i zaatakowała [$attackerName]
 An enemy [unit] was spotted near our territory = Wroga jednostka [unit] została zauważona blisko naszego terytorium
@@ -678,7 +678,7 @@ One of our trades with [nation] has been cut short = Jedna z naszych wymian hand
 [nation] refused to stop settling cities near us! = Nacja [nation] nadal będzie zakładać nowe miasta w pobliżu nas!
 We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
-We have discovered [naturalWonder]! = Odkryliśmy [naturlWonder]!
+We have discovered [naturalWonder]! = Odkryliśmy [naturalWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Otrzymaliśmy [goldAmount] Złota za odkrycie [naturalWonder]
 Your relationship with [cityStateName] is about to degrade = Twoja relacje z [cityStateName] jest bliska degradacji
 Your relationship with [cityStateName] degraded = Twoja relacja z [cityStateName] została zdegradowana
@@ -711,7 +711,7 @@ Fortification = Umocnienia
 Sleep = Uśpij
 Moving = W ruchu
 Set up = Przygotowane
-Upgrade to [unitType] ([goldCost] gold) = Ulepsz jednostkę
+Upgrade to [unitType] ([goldCost] gold) = Ulepsz do [unitType] ([goldCost] gold)
 Found city = Załóż miasto
 Promote = Awansuj
 Health = Zdrowie
@@ -776,9 +776,9 @@ Stopped expansion = Zatrzymana ekspansja
 Food converts to production = Przetwarzanie żywności na produkcje
 [turnsToStarvation] turns to lose population = Ilość tur do utraty populacji: [turnsToStarvation]
 Stopped population growth = Zatrzymane rośnięcie populacji
-In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numerOfTurns]
+In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numberOfTurns]
 Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
-Are you sure you want to sell this [building]? = Aby czy na pewno chcesz sprzedać [buildings]?
+Are you sure you want to sell this [building]? = Aby czy na pewno chcesz sprzedać [building]?
 [greatPerson] points = Punkty [greatPerson]
 Great person points = Punkty wielkiego człowieka
 Current points = Obecne punkty
@@ -825,7 +825,7 @@ Conduct Trade Mission = Prowadzenie Misji Handlowej
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Twoja misja handlowa do [civName] zdobyła dla ciebie [goldAmount] złota oraz [influenceAmount] wpływów
 Hurry Wonder = Przyspiesz Budowanie Cudu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele są zadowoleni pod twoim panowaniem tak długo że imperium wkracza w Złotą Era
-You have entered the [newEra]! = Wkroczyłeś do 
+You have entered the [newEra]! = Wkroczyłeś do [newEra]!
 [policyBranch] policy branch unlocked! = Odblokowano gałąź ustroju społecznego [policyBranch] 
 Overview = Przegląd
 Total = Łącznie
