--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -660,7 +660,7 @@ An enemy [RangedUnit] has destroyed the defence of [cityname] =
  # Requires translation!
 Enemy city [cityName] has destroyed our [ourUnit] = 
 An enemy [unit] was destroyed while attacking [cityname] = Um(a) [unit] inimigo(a) foi destruido enquanto atacava [cityname]
-An enemy [unit] was destroyed while attacking our [ourUnit] = Um(a) [unit] inimigo(a) foi destruido(a) enquanto atacando nosso(a) [ourUit]
+An enemy [unit] was destroyed while attacking our [ourUnit] = Um(a) [unit] inimigo(a) foi destruido(a) enquanto atacando nosso(a) [ourUnit]
  # Requires translation!
 Our [attackerName] was destroyed by an intercepting [interceptorName] = 
  # Requires translation!
@@ -686,7 +686,7 @@ We have found survivors in the ruins - population added to [cityName] = Encontra
 We have discovered the lost technology of [techName] in the ruins! = Nós descobrimos a tecnologia perdida de [techName] nas ruínas!
 A [unitName] has joined us! = Um [unitName] se juntou a nós!
 An ancient tribe trains our [unitName] in their ways of combat! = Uma antiga tribo treina nosso [unitName] em suas formas de combate!
-We have found a stash of [amount] gold in the ruins! = Encontramos um estoque de [quantidade] de ouro nas ruínas!
+We have found a stash of [amount] gold in the ruins! = Encontramos um estoque de [amount] de ouro nas ruínas!
  # Requires translation!
 [unit] finished exploring. = 
  # Requires translation!
