--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -354,7 +354,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Poskytují [amountOfCulture] bodů Kultury při Vlivu [30] 
+Provides [amountOfCulture] culture at 30 Influence = Poskytují [amountOfCulture] bodů Kultury při Vlivu 30 
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Poskytuje 3 jídla v hlavním městě a 1 jídlo ve všech ostatních městech při Vlivu 30
 Provides 3 happiness at 30 Influence = Poskytuje 3 body Spokojenosti při Vlivu 30
 Provides land units every 20 turns at 30 Influence = Poskytuje pozemní jednotky každých 20 kol při Vlivu 30
