--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -352,7 +352,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Fournit [amountOfCulture] de Culture à 30 d'influence
+Provides [amountOfCulture] culture at 30 Influence = Fournit [amountOfCulture] de Culture à 30 d'influence
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Fournit 3 Nourriture à la capitale et 1 nourriture pour les autres villes à 30 d'influence
 Provides 3 happiness at 30 Influence = Fournit 3 de Bonheur à 30 d'influence
 Provides land units every 20 turns at 30 Influence = Fournit des unités terrestres tous les 20 tours à 30 d'influence
