--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -359,7 +359,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Bietet [amountOfCulture] Kultur für 30 Einflusspunkte
+Provides [amountOfCulture] culture at 30 Influence = Bietet [amountOfCulture] Kultur für 30 Einflusspunkte
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Bietet 3 Nahrung in der Hauptstadt und 1 Nahrung in anderen Städten für 30 Einflusspunkte
 Provides 3 happiness at 30 Influence = Bietet 3 Zufriedenheit für 30 Einflusspunkte
 Provides land units every 20 turns at 30 Influence = Bietet eine Landeinheit alle 20 Runden für 30 Einflusspunkte
