--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -502,7 +502,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Provides [amountOfCulture] culture at [30] Influence = 
+Provides [amountOfCulture] culture at 30 Influence = 
  # Requires translation!
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
  # Requires translation!
