--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -353,7 +353,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = 当影响力不低于30时提供[amountOfCulture]文化
+Provides [amountOfCulture] culture at 30 Influence = 当影响力不低于30时提供[amountOfCulture]文化
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 当影响力不低于30时为首都提供3食物，为其他城市提供1食物
 Provides 3 happiness at 30 Influence = 当影响力不低于30时提供3快乐
 Provides land units every 20 turns at 30 Influence = 当影响力不低于30时每20回合提供陆军单位
