--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -359,7 +359,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Proporciona [amountOfCulture] de cultura al alcanzar [30] de influencia
+Provides [amountOfCulture] culture at 30 Influence = Proporciona [amountOfCulture] de cultura al alcanzar 30 de influencia
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Proporciona 3 alimentos en la capital y 1 alimento en las demás ciudades al alcanzar 30 de Influencia
 Provides 3 happiness at 30 Influence = Proporciona 3 felicidad al alcanzar 30 de influencia
 Provides land units every 20 turns at 30 Influence = Proporciona unidades de tierra cada 20 turnos al alcanzar 30 de influencia
