--- a/android/assets/jsons/translationsByLanguage/Thai.properties
+++ b/android/assets/jsons/translationsByLanguage/Thai.properties
@@ -351,7 +351,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = ให้ [amountOfCulture] แต้มวัฒนธรรมที่ [30] คะแนนอิทธิพล 
+Provides [amountOfCulture] culture at 30 Influence = ให้ [amountOfCulture] แต้มวัฒนธรรมที่ 30 คะแนนอิทธิพล 
 Provides 3 food in capital and 1 food in other cities at 30 Influence = ให้ 3 อาหารที่เมืองหลวง และ 1 อาหารในเมืองอื่นๆที่ 30 คะแนนอิทธิพล
 Provides 3 happiness at 30 Influence = ให้ 3 ความสุขที่ 30 คะแนนอิทธิพล
 Provides land units every 20 turns at 30 Influence = ให้ยูนิตทัพบกทุกๆ 20 เทิร์นที่ 30 คะแนนอิทธิพล
