--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -353,7 +353,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = 當影響力不低於30時提供[amountOfCulture]文化
+Provides [amountOfCulture] culture at 30 Influence = 當影響力不低於30時提供[amountOfCulture]文化
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 當影響力不低於30時為首都提供3食物，為其他城市提供1食物
 Provides 3 happiness at 30 Influence = 當影響力不低於30時提供3快樂
 Provides land units every 20 turns at 30 Influence = 當影響力不低於30時每20回合提供陸軍單位
