--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -352,7 +352,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = 
+Provides [amountOfCulture] culture at 30 Influence = 
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
 Provides 3 happiness at 30 Influence = 
 Provides land units every 20 turns at 30 Influence = 
