--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -368,7 +368,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = 영향력이 [30]일 때부터 문화 [amountOfCulture]을(를) 제공합니다.
+Provides [amountOfCulture] culture at 30 Influence = 영향력이 30일 때부터 문화 [amountOfCulture]을(를) 제공합니다.
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 영향력이 30일 때부터 수도에 식량 +3, 수도가 아닌 도시에 식량 +1을 제공합니다.
 Provides 3 happiness at 30 Influence = 영향력이 30일 때부터 행복 +3을 제공합니다.
 Provides land units every 20 turns at 30 Influence = 영향력이 30일 때부터 20턴마다 지상 유닛을 제공합니다.
