--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -354,7 +354,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Provê [amountOfCulture] de cultura aos [30] de influência
+Provides [amountOfCulture] culture at 30 Influence = Provê [amountOfCulture] de cultura aos 30 de influência
  # Requires translation!
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
  # Requires translation!
