--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -352,7 +352,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Dodaje [amountOfCulture] kultury przy Wpływie równym 30
+Provides [amountOfCulture] culture at 30 Influence = Dodaje [amountOfCulture] kultury przy Wpływie równym 30
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Dodaje 3 jednostki żywności w stolicy i 1 jednostkę w innych miastach przy poziomie Wpływów równym 30
 Provides 3 happiness at 30 Influence = Dodaje z jednostki zadowolenia przy poziomie Wpływów równym 30
 Provides land units every 20 turns at 30 Influence = Zapewnia jednostki lądowe co 20 tur przy poziomie Wpływów równym 30
