--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -353,7 +353,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Даёт [amountOfCulture] культуры при 30 Влияния
+Provides [amountOfCulture] culture at 30 Influence = Даёт [amountOfCulture] культуры при 30 Влияния
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Даёт 3 Еды в столице и 1 Еда в остальных городах при 30 Влияния
 Provides 3 happiness at 30 Influence = Даёт 3 Счастья при 30 Влияния
 Provides land units every 20 turns at 30 Influence = Даёт сухопутные юниты каждые 20 ходов при 30 Влияния
