Indonesian is in and has a flag

--- a/android/assets/jsons/translationsByLanguage/completionPercentages.properties
+++ b/android/assets/jsons/translationsByLanguage/completionPercentages.properties
@@ -1,7 +1,8 @@
 Traditional_Chinese = 97
 Italian = 100
-Polish = 99
-Russian = 97
+Polish = 100
+Russian = 99
+Bahasa_Indonesia = 16
 Romanian = 49
 Korean = 95
 Simplified_Chinese = 97
