Translation placeholder testing (#1542)
* Added translation string placeholders test

* Fixed the placeholder typos in all translations

* [30] to 30 migration

--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -368,7 +368,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = 영향력이 [30]일 때부터 문화 [amountOfCulture]을(를) 제공합니다.
+Provides [amountOfCulture] culture at 30 Influence = 영향력이 30일 때부터 문화 [amountOfCulture]을(를) 제공합니다.
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 영향력이 30일 때부터 수도에 식량 +3, 수도가 아닌 도시에 식량 +1을 제공합니다.
 Provides 3 happiness at 30 Influence = 영향력이 30일 때부터 행복 +3을 제공합니다.
 Provides land units every 20 turns at 30 Influence = 영향력이 30일 때부터 20턴마다 지상 유닛을 제공합니다.
@@ -1656,7 +1656,7 @@ Siege II = 공성 II
 Siege III = 공성 III
 Evasion = 회피
 Reduces damage taken from interception by 50% = 요격으로 인한 피해 -50%
-Bonus when intercepting [amount]% = 적을 요격할 때 전투력 +[bonusAmount]%
+Bonus when intercepting [amount]% = 적을 요격할 때 전투력 +[amount]%
 Ambush I = 공중 매복 I
 Ambush II = 공중 매복 II
 Haka War Dance = 하카 전쟁 의식
