--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -359,12 +359,12 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Provides [amountOfCulture] culture at [30] Influence = Proporciona [amountOfCulture] de cultura al alcanzar [30] de influencia
+Provides [amountOfCulture] culture at 30 Influence = Proporciona [amountOfCulture] de cultura al alcanzar 30 de influencia
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Proporciona 3 alimentos en la capital y 1 alimento en las demás ciudades al alcanzar 30 de Influencia
 Provides 3 happiness at 30 Influence = Proporciona 3 felicidad al alcanzar 30 de influencia
 Provides land units every 20 turns at 30 Influence = Proporciona unidades de tierra cada 20 turnos al alcanzar 30 de influencia
 Gift [giftAmount] gold (+[influenceAmount] influence) = Regalar [giftAmount] de oro (+[influenceAmount] influencia)
-Relationship changes in another [turnsToRelationshipChange] turns = La relación cambiará en [turnToRelationshipChange] turnos
+Relationship changes in another [turnsToRelationshipChange] turns = La relación cambiará en [turnsToRelationshipChange] turnos
 
 Cultured = Culta
 Maritime = Marítima
@@ -633,7 +633,7 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = ¡No se p
 [construction] has been built in [cityName] = [construction] se ha construido en [cityName]
 [wonder] has been built in a faraway land = [wonder] ha terminado su construcción en tierras lejanas
 Work has started on [construction] = Se ha empezado a trabajar en [construction]
-[cityName] cannot continue work on [construction] = La ciudad de [cityname] no puede continuar construyendo [construction]
+[cityName] cannot continue work on [construction] = La ciudad de [cityName] no puede continuar construyendo [construction]
 [cityname] has expanded its borders! = ¡[cityname] ha expandido sus fronteras
 Your Golden Age has ended. = La edad dorada ha acabado.
 [cityName] has been razed to the ground! = ¡[cityName] ha sido arrasada hasta los cimientos!
@@ -649,9 +649,9 @@ Enemy city [cityName] has destroyed our [ourUnit] = La ciudad enemiga [cityName]
 An enemy [unit] was destroyed while attacking [cityname] = Un [unit] enemigo ha sido destruido mientras atacaba [cityname]
 An enemy [unit] was destroyed while attacking our [ourUnit] = Un [unit] enemigo ha sido destruido mientras atacaba nuestro [ourUnit]
 Our [attackerName] was destroyed by an intercepting [interceptorName] = Nuestro [attackerName] fue interceptado y destruido por [interceptorName]
-Our [interceptorName] intercepted and destroyed an enemy [attackerName] = Nuestro [interceptorName] interceptó y destruyó a un [atackerName] enemigo
+Our [interceptorName] intercepted and destroyed an enemy [attackerName] = Nuestro [interceptorName] interceptó y destruyó a un [attackerName] enemigo
 Our [$attackerName] was attacked by an intercepting [$interceptorName] = Nuestro [$attackerName] fue interceptado y atacado por [$interceptorName]
-Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = Nuestro [$interceptorName] interceptó y atacó a un [$atackerName] enemigo
+Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = Nuestro [$interceptorName] interceptó y atacó a un [$attackerName] enemigo
 An enemy [unit] was spotted near our territory = Se ha avistado un [unit] enemigo cerca de nuestro territorio
 An enemy [unit] was spotted in our territory = Se ha avistado un [unit] enemigo en nuestro territorio
 [amount] enemy units were spotted near our territory = [amount] unidades enemigas fueron vistas cerca de nuestro territorio
@@ -1519,7 +1519,7 @@ Cannon = Cañón
 Musketman = Mosquetero
 Musketeer = Mosquetero Revolucionario
 Janissary = Jenízaro
-Heals [amountHealed] damage if it kills a unit = Se cura [amoutHealed] de daño si mata a una unidad
+Heals [amountHealed] damage if it kills a unit = Se cura [amountHealed] de daño si mata a una unidad
 Minuteman = Milicia Revolucionaria
 Frigate = Fragata
 Ship of the Line = Barco De La Línea
@@ -1546,7 +1546,7 @@ Anti-Aircraft Gun = Cañón antiaéreo
 Infantry = Infanteria
 Battleship = Buque de guerra
 Submarine = Submarino
-Bonus as Attacker [amount]% = Bonus al atacar [amout]%
+Bonus as Attacker [amount]% = Bonus al atacar [amount]%
 Invisible to others = Invisible para los demás
 Can only attack water = Sólo puede atacar a agua
 Carrier = Porta Aviones
