--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -355,7 +355,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Provides [amountOfCulture] culture at [30] Influence = 
+Provides [amountOfCulture] culture at 30 Influence = 
  # Requires translation!
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
  # Requires translation!
@@ -750,8 +750,8 @@ Culture = Культура
 Food = Їжа
 GOLDEN AGE = ЗОЛОТИЙ ВІК
 Golden Age = Золотий вік
-[year] BC = до н.е.
-[year] AD = після н.е.
+[year] BC = [year] до н.е.
+[year] AD = [year] після н.е.
 Civilopedia = Цивілопедія
 Start new game = Розпочати нову гру
 Save game = Зберегти гру
@@ -768,7 +768,7 @@ Raze city = Зруйнувати місто
 Stop razing city = Зупинити руйнування міста
 Buy for [amount] gold = Купити за [amount] золота
 Buy = Купити
-Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Чи хотіли б ви придбати [ConstructionName] за [buildingGoldCost]?
+Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Чи хотіли б ви придбати [constructionName] за [buildingGoldCost]?
 Maintenance cost = Вартість обслуговування
 Pick construction = Вибрати споруду
 Pick improvement = Вибрати вдосконалення
@@ -776,7 +776,7 @@ Provides [resource] = Забезпечити [resource]
 Replaces [improvement] = Замінити [improvement]
 Pick now! = Вибрати зараз!
 Build [building] = Побудувати [building]
-Train [unit] = Обучити
+Train [unit] = Обучити [unit]
 Produce [thingToProduce] = Виробляє [thingToProduce]
 Nothing = Нічого
 Annex city = Анексоване місто
@@ -977,7 +977,7 @@ Workers = Робітники
 # Other civilopedia things
 Nations = Нації
 Promotions = Акції
-Available for [unitTypes] = Доступно для
+Available for [unitTypes] = Доступно для [unitTypes]
 
 # Policies
 
@@ -1611,7 +1611,7 @@ Great Scientist = Видатний науковець
 Can hurry technology research = Може пришвидшити технологічне дослідження
 Can build improvement: Academy = Може будувати вдосконалення: Академія
 Great Merchant = Видатний торговець
-Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = Може здійснити торгівлю і отримати багато золота
+Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = Може очолити торговельну місію в місто-державу, яка заробить вам велику суму золота та [influenceAmount] впливу
 Can build improvement: Customs house = Може будувати вдосконалення: Митниця
 Great Engineer = Видатний інженер
 Can speed up construction of a wonder = Може прискорити будівництво дива світу
