Bahasa_Indonesia -> Indonesian, for uniformity among languages names

--- a/android/assets/jsons/translationsByLanguage/completionPercentages.properties
+++ b/android/assets/jsons/translationsByLanguage/completionPercentages.properties
@@ -2,7 +2,6 @@ Traditional_Chinese = 97
 Italian = 100
 Polish = 100
 Russian = 99
-Bahasa_Indonesia = 16
 Romanian = 49
 Korean = 95
 Simplified_Chinese = 97
@@ -11,6 +10,7 @@ English = 0
 Ukrainian = 91
 French = 99
 Portuguese = 84
+Indonesian = 16
 Czech = 97
 Malay = 13
 Spanish = 94
