--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -19,7 +19,7 @@ See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Трясця! Схоже щось пішло КАТАСТРОФІЧНО неправильно! Цього АБСОЛЮТНО НЕ ПОВИННО БУЛО СТАТИСЯ! Будь ласка, надішліть мені (yairm210@hotmail.com) електронний лист з ігровою інформацією (меню -> зберегти гру -> копіювати інформацію про гру -> вставити до email) і я спробую виправити якнайшвидше!
  # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Трясця! Схоже щось пішло КАТАСТРОФІЧНО неправильно! Цього АБСОЛЮТНО НЕ ПОВИННО БУЛО СТАТИСЯ! Будь ласка, надішліть нам звіт про помилку і ми виправимо якнайшидше.
 
 # Buildings
 
@@ -355,17 +355,17 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Provides [amountOfCulture] culture at 30 Influence = 
+Provides [amountOfCulture] culture at 30 Influence = Надає [amountOfCulture] культури за 30 Впливу
  # Requires translation!
-Provides 3 food in capital and 1 food in other cities at 30 Influence = 
+Provides 3 food in capital and 1 food in other cities at 30 Influence = Надає 3 їжі у столиці і 1 їжу в інших містах за 30 Впливу
  # Requires translation!
-Provides 3 happiness at 30 Influence = 
+Provides 3 happiness at 30 Influence = Надає 3 щастя за 30 Вплива
  # Requires translation!
-Provides land units every 20 turns at 30 Influence = 
+Provides land units every 20 turns at 30 Influence = Надає наземних одиниць кожні 20 ходів за 30 Впливу
  # Requires translation!
-Gift [giftAmount] gold (+[influenceAmount] influence) = 
+Gift [giftAmount] gold (+[influenceAmount] influence) = Подарувати [giftAmount] зол.(+[influenceAmount] Впливу)
  # Requires translation!
-Relationship changes in another [turnsToRelationshipChange] turns = 
+Relationship changes in another [turnsToRelationshipChange] turns = Відносини зміняться через [turnsToRelationshipChange] ход.
 
 Cultured = Культурний
 Maritime = Морський
@@ -374,10 +374,10 @@ Militaristic = Войовничий
 Type:  = Тип:
 Influence:  = Вплив
  # Requires translation!
-Reach 30 for friendship. = 
+Reach 30 for friendship. = Досягніть 30 для дружби
  # Requires translation!
-Reach highest influence above 60 for alliance. = 
-Ally:  = СоюзникЖ
+Reach highest influence above 60 for alliance. = Досягніть найвищого впливу понад 60 для союзу
+Ally:  = Союзник
 
 # Trades 
 
@@ -387,12 +387,12 @@ Retract offer = Відкликання пропозиції
 What do you have in mind? = Що ви маєте на увазі?
 Our items = Наші предмети
  # Requires translation!
-Our trade offer = 
+Our trade offer = Наша торгова пропозиція
  # Requires translation!
-[otherCiv]'s trade offer = 
+[otherCiv]'s trade offer = Торгова пропозиція від [otherCiv]
 [otherCiv]'s items = Предмети нації [otherCiv]
  # Requires translation!
-Pleasure doing business with you! = 
+Pleasure doing business with you! = Приємно вести бізнес з вами!
 I think not. = Я думаю, що ні.
 That is acceptable. = Це не прийнятно
 Accept = Прийняти
@@ -694,11 +694,11 @@ We have lost alliance with [nation]. = Тепер ми не союзники з 
 We have discovered [naturalWonder]! = Ми винайшли [naturalWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Ми отримали [goldAmount] золота за винаходження [naturalWonder]
  # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
+Your relationship with [cityStateName] is about to degrade = Ваші стосунки з [cityStateName] близькі до погіршення
  # Requires translation!
-Your relationship with [cityStateName] degraded = 
+Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
  # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = З’явилося нове варварське табір!
 
 # World Screen UI
 
@@ -993,7 +993,7 @@ Legalism = Легалізм
 Immediately creates a cheapest available cultural building in each of your first 4 cities for free = Негайно створює найдешевшу культурну будівлю в кожному з перших чотирьої твоїх міст безкоштовно
 Oligarchy = Олігархія
  # Requires translation!
-Units in cities cost no Maintenance, garrisoned city +50% attacking strength = 
+Units in cities cost no Maintenance, garrisoned city +50% attacking strength = Підрозділи у містах не треба утримувати, гарнізоване місто + 50% атакуючої сили
  # Requires translation!
 Landed Elite = 
 +10% food growth and +2 food in capital = +10% до зростання їжі і +2 ї
@@ -1003,17 +1003,17 @@ Tradition Complete = Традиція завершена
 +15% growth and +2 food in all cities = +15% зростання і +2 їжі у всіх містах
 
  # Requires translation!
-Liberty = 
+Liberty = Лібералізм
 +1 culture in every city = +1 культура в кожному місті
 Collective Rule = Колективне керівництво
  # Requires translation!
 Training of settlers increased +50% in capital, receive a new settler near the capital = 
  # Requires translation!
-Citizenship = 
+Citizenship = Права і обов'язки громадянина
  # Requires translation!
 Tile improvement speed +25%, receive a free worker near the capital = 
  # Requires translation!
-Republic = 
+Republic = Республіка
  # Requires translation!
 +1 construction in every city, +5% construction when constructing buildings = 
  # Requires translation!
@@ -1055,151 +1055,151 @@ Professional Army =
 Honor Complete = 
 
  # Requires translation!
-Gain gold for each unit killed = 
+Gain gold for each unit killed = Отримайте золото за кожний вбитий підрозділ
  # Requires translation!
-Piety = 
+Piety = Побожність
  # Requires translation!
-Building time of culture buildings reduced by 15% = 
+Building time of culture buildings reduced by 15% = Час будівництва будівель культури скорочено на 15%
  # Requires translation!
-Organized Religion = 
+Organized Religion = Організована релігія
  # Requires translation!
-+1 happiness for each monument, temple and monastery = 
++1 happiness for each monument, temple and monastery = +1 щастя за кожний пам’ятник, храм та монастир
  # Requires translation!
-Mandate Of Heaven = 
+Mandate Of Heaven = Мандат небес
  # Requires translation!
-50% of excess happiness added to culture towards policies = 
+50% of excess happiness added to culture towards policies = 50% надлишкового щастя додають культурі до політики
  # Requires translation!
-Theocracy = 
+Theocracy = Теократія
  # Requires translation!
-Temples give +10% gold = 
+Temples give +10% gold = Храми дають +10% золота
  # Requires translation!
-Reformation = 
+Reformation = Реформація
  # Requires translation!
 +33% culture in all cities with a world wonder, immediately enter a golden age = 
- # Requires translation!
-Free Religion = 
+ # Requires translation!+ 33% культури у всіх містах із світовим дивом, негайно вступаєте у золоту епоху
+Free Religion = Вільна релігія
  # Requires translation!
 +1 culture for each monument, temple and monastery. Gain a free policy. = 
  # Requires translation!
-Piety Complete = 
+Piety Complete = Побожність завершена
  # Requires translation!
-Reduce culture cost of future policies by 10% = 
+Reduce culture cost of future policies by 10% = Зменшити витрати на майбутню політику на культуру на 10%
 
  # Requires translation!
-Commerce = 
+Commerce = Торгівля
  # Requires translation!
-+25% gold in capital = 
++25% gold in capital = +25% золота в столиці
  # Requires translation!
-Trade Unions = 
+Trade Unions = Профспілка
  # Requires translation!
-Maintenance on roads & railroads reduced by 33%, +2 gold from all trade routes = 
+Maintenance on roads & railroads reduced by 33%, +2 gold from all trade routes = Обслуговування на дорогах та залізницях зменшилось на 33%, +2 золота з усіх торгових шляхів
  # Requires translation!
-Mercantilism = 
+Mercantilism = Меркантилізм
  # Requires translation!
--25% to purchasing items in cities = 
+-25% to purchasing items in cities =-25% на придбання предметів у містах 
  # Requires translation!
-Entrepreneurship = 
+Entrepreneurship = Підприємництво
  # Requires translation!
-Great Merchants are earned 25% faster, +1 Science from every Mint, Market, Bank and Stock Exchange. = 
+Great Merchants are earned 25% faster, +1 Science from every Mint, Market, Bank and Stock Exchange. = Великі торговці заробляють на 25% швидше, +1 наука від кожного монетного двору, ринку, банку та фондової біржі.
  # Requires translation!
-Patronage = 
+Patronage = Меценатство
  # Requires translation!
-Cost of purchasing culture buildings reduced by 50% = 
+Cost of purchasing culture buildings reduced by 50% = Вартість придбання будівель культури знижена на 50%
  # Requires translation!
-Protectionism = 
+Protectionism = Протекціонізм
  # Requires translation!
-+1 happiness from each luxury resource = 
++1 happiness from each luxury resource =+1 щастя від кожного ресурсу розкоші
  # Requires translation!
-Commerce Complete = 
+Commerce Complete = Торгівля завершена
  # Requires translation!
-+1 gold from every trading post, double gold from Great Merchant trade missions = 
++1 gold from every trading post, double gold from Great Merchant trade missions = +1 золото з кожного торгового пункту, подвійне золото від торгових місій Великого купця
 
  # Requires translation!
-Rationalism = 
+Rationalism = Раціоналізм
  # Requires translation!
-Production to science conversion in cities increased by 33% = 
+Production to science conversion in cities increased by 33% = Перетворення виробництва в науку в містах збільшилося на 33%
  # Requires translation!
-Secularism = 
+Secularism = Секуляризм
  # Requires translation!
-+2 science from every specialist = 
++2 science from every specialist = +2 науки за кожного спеціаліста
  # Requires translation!
-Humanism = 
+Humanism = Людяність
  # Requires translation!
-+1 happiness from every university, observatory and public school = 
++1 happiness from every university, observatory and public school = +1 щастя від кожного університету, обсерваторії та державної школи
  # Requires translation!
-Free Thought = 
+Free Thought = Вільнодумство
  # Requires translation!
-+1 science from every trading post, +17% science from universities = 
++1 science from every trading post, +17% science from universities = +1 наука з кожного торгового пункту, + 17% наука з університетів
  # Requires translation!
-Sovereignty = 
+Sovereignty = Державний суверенітет
  # Requires translation!
-+15% science while empire is happy = 
++15% science while empire is happy = +15% науки, коли імперія щаслива
  # Requires translation!
-Scientific Revolution = 
+Scientific Revolution = Научна революція
  # Requires translation!
-Gain 2 free technologies = 
+Gain 2 free technologies = Отримати 2 безкоштовні технології
  # Requires translation!
-Rationalism Complete = 
+Rationalism Complete = Раціоналізм завершено
  # Requires translation!
-+1 gold from all science buildings = 
++1 gold from all science buildings = +1 золото від усіх научних будівель
 
  # Requires translation!
-Freedom = 
+Freedom = Свобода
  # Requires translation!
-+25% great people rate = 
++25% great people rate = +25% великих людей
  # Requires translation!
-Constitution = 
+Constitution = Конституція
  # Requires translation!
-+2 culture from each wonder = 
++2 culture from each wonder = +2 культури за кожне диво
  # Requires translation!
-Universal Suffrage = 
+Universal Suffrage = Загальне виборче право
  # Requires translation!
-+1 production per 5 population = 
++1 production per 5 population = +1 виробництво за кожні 5 од. населення
  # Requires translation!
-Civil Society = 
+Civil Society = Громадянське суспільство
  # Requires translation!
--50% food consumption by specialists = 
+-50% food consumption by specialists = -50% споживання їжі фахівцями
  # Requires translation!
-Free Speech = 
+Free Speech = Свобода слова
  # Requires translation!
-+1 culture for every 2 citizens = 
++1 culture for every 2 citizens = +1 культура за кожні 2 од. населення
  # Requires translation!
-Democracy = 
+Democracy = Демократія
  # Requires translation!
-Specialists produce half normal unhappiness = 
+Specialists produce half normal unhappiness = Спеціалісти виробляють удвічі менше нещастя
  # Requires translation!
-Freedom Complete = 
+Freedom Complete = Свобода завершена
  # Requires translation!
-Tile yield from great improvement +100%, golden ages increase by 50% = 
+Tile yield from great improvement +100%, golden ages increase by 50% = Врожайність клітини від великого покращення + 100%, золотий вік збільшується на 50%
 
  # Requires translation!
-Autocracy = 
+Autocracy = Автократія
  # Requires translation!
--33% unit upkeep costs = 
+-33% unit upkeep costs = -33% витрат на утримання підрозділів
  # Requires translation!
-Populism = 
+Populism = Популізм
  # Requires translation!
-Wounded military units deal +25% damage = 
+Wounded military units deal +25% damage = Поранені військові частини завдають +25% шкоди
  # Requires translation!
-Militarism = 
+Militarism = Мілітаризм
  # Requires translation!
-Gold cost of purchasing units -33% = 
+Gold cost of purchasing units -330 = Вартість купівлі підрозділів змешнується на 330
  # Requires translation!
-Fascism = 
+Fascism = Фашизм
  # Requires translation!
-Quantity of strategic resources produced by the empire increased by 100% = 
+Quantity of strategic resources produced by the empire increased by 100% = Кількість вироблених імперією стратегічних ресурсів зросла на 100%
  # Requires translation!
-Police State = 
+Police State = Поліційна держава
  # Requires translation!
-Captured cities retain their previous borders = 
+Captured cities retain their previous borders = Захоплені міста зберігають свої попередні кордони
  # Requires translation!
-Total War = 
+Total War = Тотальна війна
  # Requires translation!
-+15% production when building military units and new military units start with 15 Experience = 
++15% production when building military units and new military units start with 15 Experience = +15 виробництва при будівництві військових підрозділів і нові військові підрозділи розпочинають з 15-ма од. досвіду
  # Requires translation!
-Autocracy Complete = 
+Autocracy Complete = Автократія завершена
  # Requires translation!
-+1 happiness from each Walls, Castle and Arsenal = 
++1 happiness from each Walls, Castle and Arsenal = +1 щастя за кожну стінку, замок і арсенал
 
 # Technologies
 
