--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1030,29 +1030,29 @@ Liberty Complete =
 Free Great Person of choice near capital = 
 
  # Requires translation!
-Honor = 
+Honor = Честь
  # Requires translation!
-+25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = 
++25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = +25% бонуса проти варварів; отримайте культури при вбивстві варварського підрозділа
  # Requires translation!
-Warrior Code = 
+Warrior Code = Кодекс воїна
  # Requires translation!
-+20% production when training melee units = 
++20% production when training melee units = +20% виробництва при виробництві ближньобійників
  # Requires translation!
-Discipline = 
+Discipline = Дисципліна
  # Requires translation!
 +15% combat strength for melee units which have another military unit in an adjacent tile = 
  # Requires translation!
 Military Tradition = 
  # Requires translation!
-Military units gain 50% more Experience from combat = 
+Military units gain 50% more Experience from combat = Військові підрозділи отримують на 50% більше досвіду бойових дій
  # Requires translation!
 Military Caste = 
  # Requires translation!
 Each city with a garrison increases happiness by 1 and culture by 2 = 
  # Requires translation!
-Professional Army = 
+Professional Army = Професійна армія
  # Requires translation!
-Honor Complete = 
+Honor Complete = Честь завершена
 
  # Requires translation!
 Gain gold for each unit killed = Отримайте золото за кожний вбитий підрозділ
