--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1021,7 +1021,7 @@ Representation =
  # Requires translation!
 Each city founded increases culture cost of policies 33% less than normal. Starts a golden age. = 
  # Requires translation!
-Meritocracy = 
+Meritocracy = Меритократія
  # Requires translation!
 +1 happiness for every city connected to capital, -5% unhappiness from citizens = 
  # Requires translation!
