--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1027,7 +1027,7 @@ Meritocracy = Меритократія
  # Requires translation!
 Liberty Complete = 
  # Requires translation!
-Free Great Person of choice near capital = 
+Free Great Person of choice near capital = Безкоштовна велика людина біля столиці
 
  # Requires translation!
 Honor = Честь
